--- a/xss/production/test/3js_carousel.html
+++ b/xss/production/test/3js_carousel.html
@@ -140,6 +140,7 @@ new THREE.Plane(
 128,164);
 	    var img1 = new THREE.Mesh(img1_plane, materials[0]);
 	    scene.addObject(img1);
+                img1.materials[ 0 ] = materials[0];
 	document.addEventListener( 'mousemove', mousein_img1, false );
 	function mousein_img1 (event)
 	{
@@ -173,6 +174,7 @@ new THREE.Plane(
 128,164);
 	    var img1_reflect = new THREE.Mesh(img1_reflect_plane, materials[1]);
 	    scene.addObject(img1_reflect);
+                img1_reflect.materials[ 0 ] = materials[1];
                 img1_reflect.doubleSided = true;
                 img1_reflect.scale.y = 0.800000012;
                 img1_reflect.position.y = -131.199997;
@@ -182,6 +184,7 @@ new THREE.Plane(
 128,164);
 	    var img2 = new THREE.Mesh(img2_plane, materials[2]);
 	    scene.addObject(img2);
+                img2.materials[ 0 ] = materials[2];
 	document.addEventListener( 'mousemove', mousein_img2, false );
 	function mousein_img2 (event)
 	{
@@ -215,6 +218,7 @@ new THREE.Plane(
 128,164);
 	    var img2_reflect = new THREE.Mesh(img2_reflect_plane, materials[3]);
 	    scene.addObject(img2_reflect);
+                img2_reflect.materials[ 0 ] = materials[3];
                 img2_reflect.doubleSided = true;
                 img2_reflect.scale.y = 0.800000012;
                 img2_reflect.position.y = -131.199997;
@@ -224,6 +228,7 @@ new THREE.Plane(
 128,164);
 	    var img3 = new THREE.Mesh(img3_plane, materials[4]);
 	    scene.addObject(img3);
+                img3.materials[ 0 ] = materials[4];
 	document.addEventListener( 'mousemove', mousein_img3, false );
 	function mousein_img3 (event)
 	{
@@ -257,6 +262,7 @@ new THREE.Plane(
 128,164);
 	    var img3_reflect = new THREE.Mesh(img3_reflect_plane, materials[5]);
 	    scene.addObject(img3_reflect);
+                img3_reflect.materials[ 0 ] = materials[5];
                 img3_reflect.doubleSided = true;
                 img3_reflect.scale.y = 0.800000012;
                 img3_reflect.position.y = -131.199997;
@@ -266,6 +272,7 @@ new THREE.Plane(
 128,164);
 	    var img4 = new THREE.Mesh(img4_plane, materials[6]);
 	    scene.addObject(img4);
+                img4.materials[ 0 ] = materials[6];
 	document.addEventListener( 'mousemove', mousein_img4, false );
 	function mousein_img4 (event)
 	{
@@ -299,6 +306,7 @@ new THREE.Plane(
 128,164);
 	    var img4_reflect = new THREE.Mesh(img4_reflect_plane, materials[7]);
 	    scene.addObject(img4_reflect);
+                img4_reflect.materials[ 0 ] = materials[7];
                 img4_reflect.doubleSided = true;
                 img4_reflect.scale.y = 0.800000012;
                 img4_reflect.position.y = -131.199997;
@@ -308,6 +316,7 @@ new THREE.Plane(
 128,164);
 	    var img5 = new THREE.Mesh(img5_plane, materials[8]);
 	    scene.addObject(img5);
+                img5.materials[ 0 ] = materials[8];
 	document.addEventListener( 'mousemove', mousein_img5, false );
 	function mousein_img5 (event)
 	{
@@ -341,6 +350,7 @@ new THREE.Plane(
 128,164);
 	    var img5_reflect = new THREE.Mesh(img5_reflect_plane, materials[9]);
 	    scene.addObject(img5_reflect);
+                img5_reflect.materials[ 0 ] = materials[9];
                 img5_reflect.doubleSided = true;
                 img5_reflect.scale.y = 0.800000012;
                 img5_reflect.position.y = -131.199997;
