--- a/xss/production/test/3js-ui.html
+++ b/xss/production/test/3js-ui.html
@@ -67,9 +67,9 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
-		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.0500000007);
+		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
 set_rotation_z(plane_1.rotation, get_rotation_y(cube_1.rotation));
-set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.0500000007);
+set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
 		set_active_camera(camera_1);
 }
 var materials = 
@@ -160,9 +160,9 @@ application.y_target_rotation_on_mouse_down = application.y_target_rotation;
 		if (application.is_mouse_down)
 {
 application.mouse_x = x - application.window_half_x;
-application.x_target_rotation = application.x_target_rotation_on_mouse_down + (application.mouse_x - application.mouse_x_on_mouse_down) * 0.0199999996;
+application.x_target_rotation = application.x_target_rotation_on_mouse_down + (application.mouse_x - application.mouse_x_on_mouse_down) * 0.300000012;
 application.mouse_y = y - application.window_half_y;
-application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.0199999996;
+application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.300000012;
 }
 	};
 	document.addEventListener( 'keydown', keydown_application, false );
@@ -210,11 +210,11 @@ if(ui)
                 lbl0.position(240, 75);
 		    btn1 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",g_ui_root.manager, g_ui_root);
-                btn1.set_rotation(0.200000003);
+                btn1.set_rotation(15);
 	btn1.click = function()
 	{    
 		lbl0.text("Got " + application.clicks + " smileys");
-btn1.set_rotation(btn1.get_rotation() + 0.200000003);
+btn1.set_rotation(btn1.get_rotation() + 10);
 application.clicks = application.clicks + 1;
 	};
  btn1.center(50, 50); 
