--- a/xss/production/test/box2d1.html
+++ b/xss/production/test/box2d1.html
@@ -25,7 +25,7 @@
         , b2Transform = Box2D.Common.Math.b2Transform
         ;
         var g_world = new b2World(
-            new b2Vec2(1, 0)    //gravity
+            new b2Vec2(0, 5)    //gravity
         ,  true                 //allow sleep
         );
         var g_step_collisions = [];
@@ -64,7 +64,7 @@
              fixDef.friction = 0.5;
              fixDef.restitution = 0.200000003;
              bodyDef.type = b2Body.b2_dynamicBody;
-                    fixDef.shape = new b2CircleShape(1.20000005/g_world_scale);
+                    fixDef.shape = new b2CircleShape(20/g_world_scale);
             fixDef.isSensor = false;
                 bodyDef.position.Set(10, 10);
             current_body = g_world.CreateBody(bodyDef);
